--- a/WebApp/homepage.css
+++ b/WebApp/homepage.css
@@ -1,10 +1,7 @@
-.header{
-	background-color: grey;
-	border: 2px solid red;
-}
 
 h1{
     float: right;
+    margin-bottom: 20px;
   }
 
 .userinfo{
