--- a/WebApp/index.css
+++ b/WebApp/index.css
@@ -15,7 +15,7 @@ img {
 .logincard{
 	max-height: 700px;
 	max-width: 500px;
-	background: rgba(102, 153, 204, 0.8);
+	background: rgba(0,128,128,0.7);
 	margin: auto;
 	font-size: 5;
 	border-radius: 5px;
